kratos/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: kratos
  template:
    metadata:
      labels:
        app: kratos
    spec:
      containers:
        - name: kratos
          image: oryd/kratos:v26.2.0
          imagePullPolicy: IfNotPresent
          command:
            - kratos
            - serve
            - -c
            - /etc/config/kratos/kratos.yml
            - --dev
            - --watch-courier
          ports:
            - name: public
              containerPort: 4433
            - name: admin
              containerPort: 4434
          volumeMounts:
            - name: sqlite
              mountPath: /var/lib/sqlite
            - name: config
              mountPath: /etc/config/kratos
              readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: sqlite
          persistentVolumeClaim:
            claimName: kratos-sqlite
        - name: config
          configMap:
            name: kratos
