kratos/base/service-admin.yml
apiVersion: v1
kind: Service
metadata:
  name: kratos-admin
  labels:
    app: kratos
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 4434
      targetPort: admin
  selector:
    app: kratos
