kratos/base/service-public.yml
apiVersion: v1
kind: Service
metadata:
  name: kratos-public
  labels:
    app: kratos
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 4433
      targetPort: public
  selector:
    app: kratos
