kratos/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos
  labels:
    app: kratos
spec:
  type: ClusterIP
  ports:
    - name: public
      protocol: TCP
      port: 4433
      targetPort: public
    - name: admin
      protocol: TCP
      port: 4434
      targetPort: admin
  selector:
    app: kratos
